# TOBI_MPC_SERVER

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  deploy.sh  dkls.dockerfile  docker-compose-local.yaml  docker-compose.yaml  fly.toml  init.sql  optim.dockerfile  relay.dockerfile  run_local.sh
auth_server/: .gitignore  README.md  docker-compose.yml  dockerfile  nginx.conf  node_server.py  requirements.txt
auth_server/templates/: cache.html
crates/legacy-keyshare/: Cargo.toml
crates/legacy-keyshare/src/: lib.rs  schnorr.rs
crates/msg-relay-svc/: Cargo.toml
crates/msg-relay-svc/src/: flags.rs  main.rs  web.rs
docs/: fly_instructions.md
examples/evm/: Cargo.toml
examples/evm/src/: main.rs
legacy_keyshare_data/: EDDSA_KEYSHARE.keyshare  ed_legacy_share2.json  legacy_share1.json
scripts/: build_nodejs_wasm.sh  dkg-setup.sh  dkg.sh  dsg-setup.sh  dsg.sh  gen-keys.sh  run_browser_node.sh  run_headless_node1.sh  run_headless_node2.sh  run_msg-relay-svc.sh
shells/: get_env.sh  run_dkls.sh  run_local_node.sh  run_local_node_with_gcp.sh  run_local_relay.sh  run_relay.sh  run_server.sh
src/: auth.rs  cache.rs  config.rs  crypto.rs  error.rs  flags.rs  main.rs  serve.rs  sign.rs  slack.rs  storage.rs  trace.rs  utils.rs  validators.rs
wrapper/wasm/: Cargo.toml  deno.jsonc  dkls_test.js  load-dkls.ts  main.ts  main_test.ts
wrapper/wasm/demo/: Caddyfile  example-dotenv  package-lock.json  package.json  proxy-local.js  proxy.js  server.js  tsconfig.json  vite.config.ts
wrapper/wasm/demo/src/: hooks.ts
wrapper/wasm/demo/src/lib/: base64.ts  config.ts  dkls.ts  hex.ts  index.ts  nodes.ts  stores.ts
wrapper/wasm/demo/src/lib/components/: Intro.svelte  SelectPublicKey.svelte  SubSection.svelte  SummaryTimes.svelte  TimeEntry.svelte  TimeMetrics.svelte
wrapper/wasm/demo/src/routes/: +layout.svelte  +page.svelte
wrapper/wasm/demo/src/routes/all-cloud/: +page.svelte
wrapper/wasm/demo/src/routes/web-cloud/: +page.svelte
wrapper/wasm/js/: keyshare-cast.js  msg-relay.js  test.ts
wrapper/wasm/src/: abort.rs  eddsa.rs  keygen.rs  keyshare.rs  legacy_share.rs  lib.rs  relay.rs  setup.rs  sign.rs  utils.rs
wrapper/wasm/src/eddsa/: keygen.rs  keyshare.rs  migration.rs  sign.rs
wrapper/wasm/src/setup/: finish.rs  keygen.rs  sign.rs
