[package]
name = "tobi-server"
version = "0.1.0"
edition = "2021"


[dependencies]
simple-cloud-node.workspace = true
msg-relay.workspace = true
dkls23 = { workspace = true, default-features = true }
futures.workspace = true
legacy-keyshare = { path = "./crates/legacy-keyshare" }
crypto_box = "0.9.1"
tokio = { workspace = true, features = [
  "net",
  "macros",
  "fs",
  "rt-multi-thread",
  "signal",
] }
sha2 = "0.10.8"
xflags = "0.3"
url = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
axum = { workspace = true, features = [ "ws", "tokio", "http1", "macros" ] }
tower = {workspace = true, features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { workspace = true, features = ["limit", "trace", "cors"] }
tower-layer = "0.3.2"
base64 = "0.13"
redis = "0.23.3"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.10.2"
jsonwebtoken = { version = "9.1.0", features = ["use_pem"] }
mysql = "24.0.0"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
ethers = "1.0.2"
crypto_secretbox = "0.1.1"
http = "0.2.11"
google-cloud-storage = "0.18.0"
bytemuck.workspace = true
anyhow.workspace = true
msg-relay-client.workspace = true
tracing = { workspace = true  }
tracing-subscriber.workspace = true
derivation-path.workspace = true
k256.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
schnorr-relay = {workspace = true, features = ["tracing"]}
bincode.workspace = true
sl-mpc-mate.workspace = true
simple-setup-msg.workspace = true
sl-oblivious.workspace = true
zeroize.workspace = true



[workspace]
members = [".", "crates/legacy-keyshare","crates/msg-relay-svc","wrapper/wasm" ]

[workspace.dependencies]
msg-relay-client = { git = "https://github.com/silence-laboratories/dkls23-rs.git", rev ="3df4e427" }
msg-relay = { git = "https://github.com/silence-laboratories/dkls23-rs.git", rev ="3df4e427" }
dkls23 = { git = "https://github.com/silence-laboratories/dkls23-rs.git", rev ="3df4e427", default-features = false}
simple-setup-msg= { git = "https://github.com/silence-laboratories/dkls23-rs.git", rev ="3df4e427" }
schnorr-relay = { git = "https://github.com/silence-laboratories/dkls23-rs.git", rev ="3df4e427", default-features =  false }
simple-cloud-node = { git = "https://github.com/silence-laboratories/dkls23-rs.git", rev ="3df4e427" }
legacy-keyshare = { path = "./crates/legacy-keyshare" }
# NOTE: using older version of sl-oblivious to support older keyshare format
sl-oblivious = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "a6b01472" }
zeroize = "1.6.1"
axum = { version = "0.7.7", default-features = false, features = [ "ws", "json" ] }
axum-extra = { version = "0.9.4",default-features = false, features = [ "cookie", "typed-header" ] }
tower = { version = "0.5.1", default-features = false }
tower-http = { version = "0.6.1", default-features = false }
bytemuck = { version = "1.14.1", features = [
  "derive",
  "min_const_generics",
  "extern_crate_alloc",
] }
anyhow = "1"
futures-util = { version = "0.3.30", default-features = false }
tokio = "1.34.0"
tokio-tungstenite = { version = "0.24" } # because axum uses this version
tracing = "0.1"
tracing-subscriber = "0.3"
derivation-path = "0.2.0"
k256 = { version = "0.13.2", features = ["ecdsa", "serde"] }
rand = "0.8"
sl-mpc-mate = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "ff63353" }
ed25519-dalek = { version = "2.0.0" }
elliptic-curve = { version = "0.13.8" }
bincode = {version = "2.0.0-rc.3", features = ["serde"] }
futures = "0.3"
